// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="emailField"
          name="name"
          placeholder="Email"
          type="email"
          value="test"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podany email jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<EmailField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="emailField"
  name="name"
  placeholder="Email"
  type="email"
  value=""
/>
`;

exports[`<EmailField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="emailField"
          label="Test"
          name="name"
          placeholder="Email*"
          required=""
          type="email"
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<EmailField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="emailField"
          label="Test"
          name="name"
          placeholder="Email"
          type="email"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
